log
Sat, May 17, 2025  1:51:44 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Sat, May 17, 2025  1:53:28 PM: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|5
total_score: 0/70
d4c0c53
Sat, May 17, 2025  1:54:46 PM: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  2|4
total_score: 15/70
565082a
Sat, May 17, 2025  2:08:06 PM: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:49:13: error: right-hand operand of comma expression has no effect [-Werror=unused-value]
   for (i = 0, i < 9; i++){
             ^
sudoku.c:49:25: error: expected ';' before ')' token
   for (i = 0, i < 9; i++){
                         ^
cc1.exe: all warnings being treated as errors
c1fa4be
Sat, May 17, 2025  2:08:49 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:49:13: error: right-hand operand of comma expression has no effect [-Werror=unused-value]
   for (i = 0, i < 9; i++){
             ^
sudoku.c:49:25: error: expected ';' before ')' token
   for (i = 0, i < 9; i++){
                         ^
cc1.exe: all warnings being treated as errors
c35df5d
Sat, May 17, 2025  2:08:57 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
e7118bf
Sat, May 17, 2025  2:12:59 PM: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  5|3
total_score: 35/70
6cc398e
